feat(process-svc): create combined harvests
