# apps/api/src/app/batch/batch.service.ts
@@ -1,7 +1,7 @@
 import { HttpStatus, Inject, Injectable } from '@nestjs/common';
 import { AmqpClientEnum, BatchMessagePatterns } from '@forrest-guard/amqp';
 import { ClientProxy } from '@nestjs/microservices';
-import { BatchCreateDto, BatchDto, ProcessDisplayDto } from '@forrest-guard/api-interfaces';
+import { BatchCombinedCreateDto, BatchCreateDto, BatchDto, ProcessDisplayDto } from '@forrest-guard/api-interfaces';
 import { firstValueFrom } from 'rxjs';
 
 @Injectable()
@@ -11,6 +11,10 @@ export class BatchService {
 
   createHarvests(batchCreateDtos: BatchCreateDto[]): Promise<HttpStatus> {
     return firstValueFrom(this.processService.send(BatchMessagePatterns.CREATE_HARVESTS, batchCreateDtos));
+  }
+
+  createCombinedHarvests(batchCombinedCreateDto: BatchCombinedCreateDto): Promise<HttpStatus> {
+    return firstValueFrom(this.processService.send(BatchMessagePatterns.CREATE_COMBINED_HARVESTS, batchCombinedCreateDto));
   }
 
   createBatches(batchCreateDtos: BatchCreateDto[]): Promise<HttpStatus> {
