# libs/api-interfaces/src/lib/dtos/process/process-step-with-multiple-harvested-lands-create.dto.ts
@@ -1,0 +1,15 @@
+export class ProcessStepWithMultipleHarvestedLandsCreateDto {
+  location: string;
+  date: string;
+  recordedBy?: string;
+  executedBy: string;
+  harvestedLands: string[];
+
+  constructor(location: string, date: string, executedBy: string, harvestedLands: string[], recordedBy?: string) {
+    this.location = location;
+    this.date = date;
+    this.executedBy = executedBy;
+    this.harvestedLands = harvestedLands;
+    this.recordedBy = recordedBy;
+  }
+}
